--- a/sdk/maps/maps-render-rest/package.json
+++ b/sdk/maps/maps-render-rest/package.json
@@ -22,22 +22,19 @@
   },
   "files": [
     "dist/",
-    "dist-esm/src/",
-    "types/maps-render-rest.d.ts",
     "README.md",
-    "LICENSE",
-    "review/*"
+    "LICENSE"
   ],
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "npm run clean && tsc -p . && dev-tool run bundle && dev-tool run vendored mkdirp ./review && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
-    "build:debug": "tsc -p . && dev-tool run bundle && dev-tool run extract-api",
-    "build:node": "tsc -p . && dev-tool run bundle --browser-test false",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
+    "build:debug": "dev-tool run build-package && dev-tool run bundle && dev-tool run extract-api",
+    "build:node": "dev-tool run build-package && dev-tool run bundle --browser-test false",
     "build:samples": "dev-tool samples publish --force",
-    "build:test": "tsc -p . && dev-tool run bundle",
+    "build:test": "dev-tool run build-package && dev-tool run bundle",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
@@ -54,8 +51,8 @@
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser",
     "test:node": "npm run clean && npm run build:test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "dev-tool run test:browser",
-    "unit-test:node": "dev-tool run test:node-ts-input -- --timeout 1200000 --exclude 'test/**/browser/*.spec.ts' 'test/**/*.spec.ts'",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "sideEffects": false,
@@ -64,40 +61,27 @@
     "@azure-rest/core-client": "^1.0.0",
     "@azure/core-auth": "^1.3.0",
     "@azure/core-rest-pipeline": "^1.8.0",
-    "@azure/maps-common": "1.0.0-beta.2",
     "@azure/logger": "^1.0.0",
+    "@azure/maps-common": "1.0.0-beta.2",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@azure-tools/test-credential": "^1.0.0",
-    "@azure-tools/test-recorder": "^3.0.0",
-    "@azure-tools/test-utils": "^1.0.1",
+    "@azure-tools/test-credential": "^2.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/core-util": "^1.9.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/identity": "^4.0.1",
-    "@types/chai": "^4.2.8",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
+    "@vitest/browser": "^2.1.5",
+    "@vitest/coverage-istanbul": "^2.1.5",
     "autorest": "latest",
-    "chai": "^4.2.0",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "karma": "^6.2.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage": "^2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "~1.4.0",
-    "karma-sourcemap-loader": "^0.3.8",
-    "mocha": "^10.0.0",
-    "nyc": "^17.0.0",
-    "source-map-support": "^0.5.9",
-    "ts-node": "^10.0.0",
-    "typescript": "~5.6.2"
+    "playwright": "^1.49.0",
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.5"
   },
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/maps/maps-render-rest/README.md",
   "//metadata": {
@@ -108,9 +92,7 @@
       }
     ]
   },
-  "browser": {
-    "./dist-esm/test/public/utils/env.js": "./dist-esm/test/public/utils/env.browser.js"
-  },
+  "browser": "./dist/browser/index.js",
   "//sampleConfiguration": {
     "productName": "Azure Maps Render",
     "productSlugs": [
@@ -121,5 +103,21 @@
       "Azure Maps Resource": "https://docs.microsoft.com/azure/azure-maps/how-to-create-template"
     },
     "disableDocsMs": true
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
   }
 }
