--- a/sdk/maps/maps-route-rest/tsconfig.json
+++ b/sdk/maps/maps-route-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/maps-route": [
-        "./src/index"
-      ]
+      "@azure-rest/maps-route": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
