--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -22,6 +22,7 @@ steps:
         $packageProps = npm view $packageName -json -silent | ConvertFrom-Json
         $originalTags = "{}"
         if ($packageProps.error) {
+          write-host $($packageProps.error)
           if ($packageProps.error.code -ne "E404") {
             Write-Error $packageProps.error
             exit 1
