--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -16,7 +16,7 @@ steps:
         tar -xzf $tarFile -C $tempDir
         $packageJsonDir = "$tempDir/package/package.json"
         $pkg = Get-Content -Raw "$packageJsonDir" | ConvertFrom-Json
-        $packageName = $pkg.Name
+        $packageName = "@azure/tessssssst"#$pkg.Name
         $packageVersion = $pkg.Version
         $packageProps = npm view $packageName -json -silent | ConvertFrom-Json
         $originalTags = "{}"
@@ -31,6 +31,7 @@ steps:
         else {
           $originalTags = $packageProps.'dist-tags' | ConvertTo-Json -Compress
         }
+        $packageName = $pkg.Name
         echo "##vso[task.setvariable variable=PackageName]$packageName"
         echo "##vso[task.setvariable variable=OriginalTags]$originalTags"
         echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion"
