--- a/sdk/formrecognizer/ai-form-recognizer/package.json
+++ b/sdk/formrecognizer/ai-form-recognizer/package.json
@@ -23,9 +23,6 @@
   },
   "files": [
     "dist/",
-    "dist-esm/src/",
-    "dom-shims.d.ts",
-    "types/ai-form-recognizer.d.ts",
     "README.md",
     "LICENSE"
   ],
@@ -49,16 +46,16 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "npm run clean && tsc -p . && dev-tool run bundle && npm run bundle:bin && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
-    "build:node": "tsc -p . && dev-tool run bundle",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
+    "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:samples": "echo Obsolete.",
-    "build:test": "tsc -p . && dev-tool run bundle",
+    "build:test": "dev-tool run build-package && dev-tool run bundle",
     "bundle:bin": "rollup -c rollup.config.bin.mjs 2>&1",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"bin/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* temp types *.tgz *.log test-results.*xml",
     "execute:samples": "dev-tool samples run samples-dev/",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"bin/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "autorest --typescript swagger/README.md",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -71,8 +68,8 @@
     "test:browser": "npm run build:test && npm run unit-test:browser",
     "test:node": "npm run build:test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "dev-tool run test:browser",
-    "unit-test:node": "dev-tool run test:node-ts-input -- --timeout 1200000 --exclude 'test/**/browser/*.spec.ts' \"test/**/*.spec.ts\" \"test/**/node/*.spec.ts\"",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "sideEffects": false,
@@ -90,38 +87,24 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@azure-tools/test-credential": "^1.0.0",
-    "@azure-tools/test-recorder": "^3.0.0",
-    "@azure-tools/test-utils": "^1.0.1",
+    "@azure-tools/test-credential": "^2.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/identity": "^4.0.1",
     "@rollup/plugin-node-resolve": "^15.0.0",
-    "@types/chai": "^4.1.6",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
-    "@types/sinon": "^17.0.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
+    "@vitest/browser": "^2.1.6",
+    "@vitest/coverage-istanbul": "^2.1.6",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "karma": "^6.2.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage": "^2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.8",
     "magic-string": "~0.30.10",
-    "mocha": "^10.0.0",
-    "nyc": "^17.0.0",
+    "playwright": "^1.49.0",
     "prettier": "^3.3.3",
     "rollup": "^4.0.0",
-    "sinon": "^17.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.6"
   },
   "//sampleConfiguration": {
     "skip": [
@@ -173,5 +156,22 @@
         "javascript/assets/w2/w2-single.png"
       ]
     }
-  }
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
+  },
+  "browser": "./dist/browser/index.js"
 }
